# taiwan-legal-ai-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  taiwan-legal-ai.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  taiwan-legal-ai.rockspec  taiwan-legal-ai_sdk.lua  taiwan-legal-ai_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  (+5 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  taiwanlegalai_sdk.py  taiwanlegalai_types.py
py/core/: context.py  control.py  helpers.py  operation.py  result.py  spec.py  utility_type.py
py/entity/: case_analysi_entity.py  contract_service_entity.py  legal_query_entity.py
py/feature/: audit_feature.py  cache_feature.py  log_feature.py  metrics_feature.py  proxy_feature.py  rbac_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_case_analysi_entity.py  test_contract_service_entity.py  test_exists.py  test_feature.py  test_legal_query_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: done.py  feature_add.py  feature_init.py  make_context.py  make_error.py  make_fetch_def.py  make_point.py  make_response.py  make_result.py  make_spec.py  make_url.py  param.py  prepare_auth.py  prepare_body.py  prepare_method.py  prepare_query.py  result_basic.py  result_body.py  result_headers.py  transform_request.py
(+433 files in other folders)
